<resources>
    <string name="app_name">Inspector</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configuration">config</string>
    <string name="refresh">refresh</string>
    <string name="connection_status">connection status</string>
    <string name="load">load</string>
    <string name="cancel">cancel</string>
    <string name="ip_address">IP Address</string>
    <string name="save">save</string>
    <string name="port">port</string>
    <string name="type">Type:</string>
    <string name="writable">Writable</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="write">write</string>
    <string name="give_new_value">Give new value</string>
    <string name="charts_loaded">charts loaded</string>
    <string name="chart_number">chart number</string>
    <string name="wrong_id">wrong id</string>
    <string name="chart_name_empty">chart name is empty</string>
    <string name="empty_value">empty value</string>
    <string name="ua">Ua</string>
    <string name="ub">Ub</string>
    <string name="uc">Uc</string>
    <string name="rms">RMS</string>
    <string name="ia">Ia</string>
    <string name="iaobc">Iaobc</string>
    <string name="ibobc">Ibobc</string>
    <string name="icobc">Icobc</string>
    <string name="ianet">Ianet</string>
    <string name="ibnet">Ibnet</string>
    <string name="icnet">Icnet</string>
    <string name="frequency">Frequency</string>
    <string name="thd">THD</string>
    <string name="asymmetry">Asymmetry</string>
    <string name="max_value">Max Value</string>
    <string name="power">Power</string>
    <string name="effective_value">Effective Value</string>
    <string name="active_power">Active power</string>
    <string name="reactive_power">Reactive power</string>
    <string name="apparent_power">Apparent power</string>
    <string name="load_data_first">load data first</string>
    <string name="samples_count">samples count</string>
    <string name="samples_cnt_empty">samples count empty</string>
    <string name="plot_title">plot title</string>
    <string name="plot_number">plot number</string>
    <string name="plot_title_empty">plot title is empty</string>
    <string name="wrong_plot_id">wrong plot id</string>
    <string name="chart_title_empty">chart title empty</string>
    <string name="index">index</string>
    <string name="title">title</string>
    <string name="plot_data">Plot data</string>
    <string name="empty_plots">chart must have at least one plot</string>
</resources>