<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:minWidth="300dp"
    android:layout_height="wrap_content"
    tools:context=".NewParameterDialog">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:minWidth="300dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:hint="@string/name"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:minWidth="100dp"
                android:id="@+id/tiet_np_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:padding="10dp"
            android:layout_gravity="center"
            android:hint="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:minWidth="100dp"
                android:inputType="number"
                android:id="@+id/tiet_np_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/type"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerItems"
                android:layout_weight="1" />

        </LinearLayout>

        <CheckBox
            android:layout_gravity="center"
            android:id="@+id/checkBox_writable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writable" />

        <LinearLayout
            android:id="@+id/layout_np_minmax"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:hint="@string/min"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:minWidth="75dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/tiet_np_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:hint="@string/max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:minWidth="75dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/tiet_np_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_np_accept"
                android:text="@string/save"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bt_np_cancel"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_np_cancel"
                android:text="@string/cancel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</ScrollView>