<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:minWidth="300dp"
    android:layout_height="wrap_content"
    tools:context=".NewParameterDialog">

    <com.google.android.material.textfield.TextInputLayout
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:hint="@string/name"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:minWidth="100dp"
            android:inputType="text"
            android:id="@+id/tiet_chart_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:padding="10dp"
        android:layout_gravity="center"
        android:hint="@string/chart_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:minWidth="150dp"
            android:inputType="number"
            android:id="@+id/tiet_chart_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_chart_accept"
            android:text="@string/save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_chart_cancel"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_chart_cancel"
            android:text="@string/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>